--- a/ubuntu/conf/ubuntu/00-installer-config.yaml
+++ b/ubuntu/conf/ubuntu/00-installer-config.yaml
@@ -27,22 +27,22 @@ network:
       #
       # Configuração do Endereço IPv4 e CIDR Estático do Ubuntu Server
       addresses:
-      - 172.16.1.20/24
+      - 172.16.22.20/24
       #
       # Configuração do Endereço de Gateway IPv4 do Ubuntu Server
-      gateway4: 172.16.1.254
+      gateway4: 172.16.22.254
       #
       # Configuração dos Endereços de DNS Server IPv4 do Ubuntu Server
       nameservers:
         addresses:
         #- 172.16.1.20
-        - 172.16.1.254
+        - 172.16.22.254
         #- 8.8.8.8
         #- 8.8.8.8
         #
         # Configuração do Nome de Pesquisa DNS do Ubuntu Server
         search:
-        - pti.intra
+        - guifrans.intra
         #
   # Configuração da versão do Protocolo Ethernet do Ubuntu Server
   version: 2
