--- a/ubuntu/conf/lamp/apache2.conf
+++ b/ubuntu/conf/lamp/apache2.conf
@@ -16,9 +16,9 @@
 # Configuração da variável de Nome do Servidor Apache2 para responder
 # por nome 
 ServerName localhost
-ServerName 172.16.1.20
-ServerName ptispo01ws01
-ServerName ptispo01ws01.pti.intra
+ServerName 172.16.22.20 
+ServerName webserver
+ServerName webserver.guifrans.intra
 #
 # O nome do arquivo a ser procurado em cada diretório para diretivas de 
 # configuração adicionais. Veja também AllowOverride diretiva.
